--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,23 @@ body{
     opacity: 0.5;
     z-index: 1;
   }
+.full-screen{
+  height: 100vh;
+
+}
+
+ .text-small{
+font-size: small;
+ }
+
+ .zoom {
+  transition: transform .5s; /* Animation */
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
   
   /*@media (pointer: coarse) and (hover: none) {
     header {
