projects section started

--- a/css/styles.css
+++ b/css/styles.css
@@ -3398,13 +3398,13 @@ input[type="button"].btn-block {
 
 .card-img,
 .card-img-top {
-  border-top-left-radius: 0.375rem;
+border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem; }
 
 .card-img,
 .card-img-bottom {
-  border-bottom-right-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem; }
+ border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;}
 
 .card-deck .card {
   margin-bottom: 1.5rem; }
@@ -3805,7 +3805,7 @@ input[type="button"].btn-block {
 
 .progress {
   display: flex;
-  height: 1rem;
+  height: .5rem;
   overflow: hidden;
   font-size: 0.75rem;
   background-color: #e9ecef;
